add routing, doucments card UI design and UI functionality

--- a/storeit/src/app/globals.css
+++ b/storeit/src/app/globals.css
@@ -167,8 +167,8 @@ body {
   --foreground: oklch(0.145 0 0);
   --card: oklch(1 0 0);
   --card-foreground: oklch(0.145 0 0);
-  --popover: var(--color-red-400);
-  --popover-foreground: var(--color-red-50);
+  --popover: var(--color-white);
+  --popover-foreground: var(--color-black);
   --primary: oklch(0.205 0 0);
   --primary-foreground: oklch(0.985 0 0);
   --secondary: oklch(0.97 0 0);
